# Factorial

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  docs.yml  mutation.yml  test.yml
crates/factorial-core/: Cargo.toml
crates/factorial-core/benches/: sim_bench.rs
crates/factorial-core/examples/: events_and_queries.rs  minimal_factory.rs  multiplayer_desync.rs  production_chain.rs  save_load.rs  transport_showcase.rs
crates/factorial-core/fuzz/: Cargo.toml
crates/factorial-core/fuzz/fuzz_targets/: fuzz_deserialize.rs  fuzz_deserialize_partitioned.rs  fuzz_mutations.rs
crates/factorial-core/src/: command_queue.rs  component.rs  data_loader.rs  dirty.rs  engine.rs  event.rs  fixed.rs  graph.rs  id.rs  item.rs  junction.rs  lib.rs  migration.rs  module.rs  processor.rs  profiling.rs  query.rs  registry.rs  replay.rs  rng.rs  serialize.rs  sim.rs  test_utils.rs  transport.rs  validation.rs
crates/factorial-core/tests/: adversarial.rs  builderment_headless.rs  integration.rs  proptest_core.rs  stress.rs
crates/factorial-data/: Cargo.toml
crates/factorial-data/src/: lib.rs  loader.rs  module_config.rs  schema.rs
crates/factorial-data/test_data/errors/duplicate_name/: items.ron
crates/factorial-data/test_data/errors/parse_error/: items.ron
crates/factorial-data/test_data/errors/unresolved_item/: items.ron  recipes.ron
crates/factorial-data/test_data/full_game/: buildings.ron  fluids.ron  items.ron  logic.ron  power.ron  recipes.ron  tech_tree.ron
crates/factorial-data/test_data/minimal_json/: buildings.json  items.json  recipes.json
crates/factorial-data/test_data/minimal_ron/: buildings.ron  items.ron
crates/factorial-demo-bevy/: Cargo.toml
crates/factorial-demo-core/: Cargo.toml
crates/factorial-demo-core/examples/: headless_runner.rs
crates/factorial-demo-core/scenes/: manifest.ron
crates/factorial-demo-core/scenes/tier1_fundamentals/01_solo_extractor/: buildings.ron  scene.ron
crates/factorial-demo-core/scenes/tier1_fundamentals/02_extract_and_smelt/: buildings.ron  scene.ron
crates/factorial-demo-core/scenes/tier1_fundamentals/03_two_input_craft/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier1_fundamentals/04_splitter/: buildings.ron  scene.ron
crates/factorial-demo-core/scenes/tier1_fundamentals/05_production_chain/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier2_transport/06_flow_transport/: buildings.ron  items.ron  scene.ron
crates/factorial-demo-core/scenes/tier2_transport/07_item_belts/: buildings.ron  items.ron  scene.ron
crates/factorial-demo-core/scenes/tier2_transport/08_batch_transfer/: buildings.ron  items.ron  scene.ron
crates/factorial-demo-core/scenes/tier2_transport/09_vehicle_routes/: buildings.ron  scene.ron
crates/factorial-demo-core/scenes/tier2_transport/10_mixed_transport/: buildings.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier3_processors/11_property_transform/: buildings.ron  items.ron  scene.ron
crates/factorial-demo-core/scenes/tier3_processors/12_demand_pull/: buildings.ron  items.ron  scene.ron
crates/factorial-demo-core/scenes/tier3_processors/13_multi_recipe/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier3_processors/14_byproduct_handling/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier4_modules/15_power_grid/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier4_modules/16_fluid_pipes/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier4_modules/17_tech_unlock/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier4_modules/18_logic_circuits/: buildings.ron  scene.ron
crates/factorial-demo-core/scenes/tier4_modules/19_logic_power/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier5_scale/20_feedback_loop/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier5_scale/21_bottleneck/: buildings.ron  items.ron  scene.ron
crates/factorial-demo-core/scenes/tier5_scale/22_mega_factory/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/scenes/tier5_scale/23_serialization/: buildings.ron  items.ron  recipes.ron  scene.ron
crates/factorial-demo-core/src/: error.rs  lib.rs  manifest.rs  scene_builder.rs  scene_manager.rs  scene_schema.rs
crates/factorial-demo-core/tests/: integration.rs
crates/factorial-examples/: Cargo.toml
crates/factorial-examples/examples/: fluid_network.rs  power_network.rs  spatial_blueprints.rs  tech_tree.rs
crates/factorial-examples/src/: lib.rs
crates/factorial-ffi/: Cargo.toml  build.rs  cbindgen.toml  factorial.h
crates/factorial-ffi/src/: lib.rs
crates/factorial-fluid/: Cargo.toml
crates/factorial-fluid/src/: bridge.rs  lib.rs
crates/factorial-integration-tests/: Cargo.toml
crates/factorial-integration-tests/tests/: builderment_cross_crate.rs  dual_role_nodes.rs  factorio_headless.rs  logic_networks.rs  oni_headless.rs  satisfactory_headless.rs  shapez_headless.rs
crates/factorial-logic/: Cargo.toml
crates/factorial-power/: Cargo.toml
crates/factorial-spatial/: Cargo.toml
crates/factorial-spatial/benches/: blueprint_bench.rs
crates/factorial-spatial/src/: blueprint.rs  lib.rs
crates/factorial-stats/: Cargo.toml
crates/factorial-tech-tree/: Cargo.toml
crates/factorial-wasm/: Cargo.toml
crates/factorial-wasm/src/: engine.rs  event.rs  graph.rs  lib.rs  logic.rs  processor.rs  query.rs  serialize.rs  transport.rs
docs/book/: book.toml
docs/coverage/: baseline.md  mutation-report.md
docs/guides/: custom-processors.md
docs/plans/: 2026-02-04-factorial-engine-design.md  2026-02-04-factorial-implementation-plan.md  2026-02-05-builderment-headless-test-design.md  2026-02-05-builderment-headless-test-plan.md  2026-02-05-engine-gap-fill.md  (+16 more)
(+89 files in other folders)
