[workspace]
resolver = "2"
members = [
    "crates/factorial-core",
    "crates/factorial-ffi",
    "crates/factorial-stats",
    "crates/factorial-tech-tree",
    "crates/factorial-power",
    "crates/factorial-integration-tests",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde", "derive"] }
fixed = { version = "1.28", features = ["serde"] }
slotmap = { version = "1.0", features = ["serde"] }
thiserror = "2"
