[workspace]
resolver = "2"
members = [
    "crates/factorial-core",
    "crates/factorial-ffi",
    "crates/factorial-stats",
    "crates/factorial-tech-tree",
    "crates/factorial-power",
    "crates/factorial-spatial",
    "crates/factorial-integration-tests",
    "crates/factorial-fluid",
    "crates/factorial-logic",
    "crates/factorial-wasm",
    "crates/factorial-examples",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde", "derive"] }
fixed = { version = "1.28", features = ["serde"] }
slotmap = { version = "1.0", features = ["serde"] }
thiserror = "2"
rayon = "1.10"
proptest = "1"
