[package]
name = "factorial-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fixed = { workspace = true }
serde = { workspace = true }
bitcode = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }

[features]
test-utils = []
profiling = []

[dev-dependencies]
criterion = "0.5"
factorial-core = { path = ".", features = ["test-utils"] }

[[bench]]
name = "sim_bench"
harness = false
