[package]
name = "factorial-data"
version = "0.1.0"
edition = "2024"

[dependencies]
factorial-core = { path = "../factorial-core", features = ["test-utils"] }
factorial-power = { path = "../factorial-power" }
factorial-fluid = { path = "../factorial-fluid" }
factorial-tech-tree = { path = "../factorial-tech-tree" }
factorial-spatial = { path = "../factorial-spatial" }
factorial-logic = { path = "../factorial-logic" }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
factorial-core = { path = "../factorial-core", features = ["test-utils"] }
