[package]
name = "factorial-ffi"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib for the shared library; rlib so `cargo test` can link unit tests.
crate-type = ["cdylib", "rlib"]

[dependencies]
factorial-core = { path = "../factorial-core" }
slotmap = { workspace = true }

[dev-dependencies]
factorial-core = { path = "../factorial-core", features = ["test-utils"] }

[build-dependencies]
cbindgen = "0.29"
