[package]
name = "factorial-fluid"
version = "0.1.0"
edition = "2024"

[dependencies]
factorial-core = { path = "../factorial-core" }
fixed = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
slotmap = { workspace = true }
factorial-core = { path = "../factorial-core", features = ["test-utils"] }
