[package]
name = "factorial-spatial"
version = "0.1.0"
edition = "2024"

[dependencies]
factorial-core = { path = "../factorial-core" }
serde = { workspace = true }
serde_json = { version = "1", optional = true }
slotmap = { workspace = true }
thiserror = { workspace = true }

[features]
blueprint-io = ["dep:serde_json"]

[dev-dependencies]
criterion = "0.5"
factorial-core = { path = "../factorial-core", features = ["test-utils"] }
serde_json = "1"

[[bench]]
name = "blueprint_bench"
harness = false
